assets/css/style.css
/* CSS RESET */

/* Box sizing reset */
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* Remove default body spacing */
body {
  margin: 0;
  padding: 0;
  line-height: 1.5;
  font-family: system-ui, sans-serif;
  background: #fff;
  color: #000;
}

/* Remove list styles */
ul,
ol {
  list-style: none;
}

/* Remove default link styles */
a {
  text-decoration: none;
  color: inherit;
}

/* Remove border and default appearance from inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
  color: inherit;
  background: none;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  appearance: none;
}

/* Ensure images and videos are responsive */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
  height: auto;
}

/* Remove built-in table spacing */
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* Reset heading styles */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-size: inherit;
  font-weight: inherit;
}

/* --------------------------------------------------------------------------------------------------------- */

/* TEXT */

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: Montserrat;
  font-weight: 800;
}

h1 {
  font-size: 5rem;
}

h2 {
  font-size: 3.5rem;
}

h3 {
  font-size: 2.5rem;
}

h4 {
  font-size: 2rem;
}

h5 {
  font-size: 1.5rem;
}

h6 {
  font-size: 1.25rem;
}

p,
li {
  font-size: 1.125rem;
  font-family: Inter;
}

.text-1-250 {
  font-size: 1.25rem;
}

.text-1-125 {
  font-size: 1.125rem;
}

.text-1-000 {
  font-size: 1rem;
}

.text-0-875 {
  font-size: 0.875rem;
}

/* COLOURS */

.text-parc-red {
  color: #D62920;
}

.text-parc-lgrey {
  color: #aaa;
}

.text-parc-grey {
  color: #888;
}

.text-parc-dgrey {
  color: #444;
}

.bg-parc-dgrey {
  background-color: #444;
}

.bg-parc-lgrey {
  background-color: #e5e5e5;
}

.bg-nav {
  background-color: rgba(255, 255, 255, 0.95);
}


/* CONTAINER */

.container {
  width: 100%;
  max-width: 100%;
  margin: 0;
  padding: 0;
}


/* BUTTON */

.fa-circle-arrow-right {
  font-size: 1.375em;
  opacity: 0%;
  transition: opacity 0.4s ease;
}

.button {
  min-width: 300px;
  max-width: 480px;
}

.button-link {
  background-color: #D62920;
  color: #fff;
  height: 60px;
  width: 100%;
  padding-left: 60px;
  padding-right: 60px;
  font-size: 1.375rem;
  font-weight: 600;
  border-top-left-radius: 84px;
  border-top-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 84px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: 0;
  transition: gap 0.4s ease;
  text-decoration: none;
}

.button-link:hover {
  background-color: #ED2D24;
  gap: 40%;
}

.button-link:hover .fa-circle-arrow-right {
  opacity: 100%;
}


/* SCROLL TO TOP BUTTON */

#scrollTopBtn {
  position: fixed;
  bottom: 36px;
  right: 36px;
  width: 60px;
  height: 60px;
  z-index: 100;
  border: none;
  background-color: rgba(0, 0, 0, 0.36);
  color: white;
  padding: 12px 16px;
  font-size: 18px;
  border-radius: 50%;
  cursor: pointer;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  display: none;
  /* Hidden by default */
  transition: opacity 0.3s;
}

#scrollTopBtn:hover {
  background-color: rgba(0, 0, 0, 0.6);
}


/* NAVBAR */

.navbar {
  display: flex;
  align-items: center;
}

.nav-links {
  list-style: none;
  display: flex;
  gap: 2rem;
}

.nav-links a {
  color: #444;
  text-decoration: none;
  font-weight: 700;
  font-size: 1.125rem;
}

.nav-links a:hover {
  color: #D62920;
  background-color: #fafafa;
}


/* HEADER */

.header {
  height: 680px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-image {
  position: relative;
  height: 680px;
  overflow: visible;
}

.background-img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: -2;
  transition: transform 3s ease;
  overflow: hidden;
}

.overlay-img {
  position: absolute;
  top: 0;
  left: -50%;
  width: 100%;
  height: 100%;
  opacity: .25;
  object-fit: cover;
  /* or contain */
  z-index: -1;
  pointer-events: none;
  /* makes it transparent to hover */
  transition: transform 3s ease;
  overflow: visible;
}

.container:hover .background-img {
  transform: scale(1.05);
}

.container:hover .overlay-img {
  transform: scale(1.25);
}


/* SECTION - OUR EXPERTISE */

.section-our-expertise {
  background-color: #f5f5f5;
  padding-bottom: 60px;
}

.our-expertise-card {
  width: 100%;
  background-color: #fff;
  padding-top: 48px;
  padding-bottom: 36px;
  padding-left: 96px;
  padding-right: 96px;
  border-radius: 24px;
  box-shadow: 0 0 24px rgba(0, 0, 0, 0.12);
  transition: box-shadow 0.2s ease;
}

.img-parc-logomark {
  transition: transform 0.4s ease;
}

.button-card {
  opacity: 0;
}

.our-expertise-card:hover {
  box-shadow: 0 0 0 4pt #D62920;
}

.our-expertise-card:hover .img-parc-logomark {
  transform: rotate(90deg);
}

.our-expertise-card:hover .button-card {
  transition: opacity 0.4s ease-in-out;
  opacity: 1;
}


/* SECTION - OUR VISION & OUR MISSION */

.our-section-image {
  position: relative;
  overflow: visible;
}

.our-icon {
  height: 84px;
}


/* SECTION - TESTIMONIALS */

.testimonial-img {
  border-radius: 12px;
  width: 270px;
}

.carousel-strip-wrapper {
  scroll-snap-type: x mandatory;
  position: relative;
  overflow: hidden;
}

.carousel-strip {
  scroll-behavior: smooth;
  scroll-snap-type: x mandatory;
  overflow-x: hidden;
  padding-inline: calc(50% - 100px)
}

.slide {
  flex: 0 0 200px;
  min-width: 720px;
  height: 318px;
  display: flex;
  scroll-snap-align: center;
  box-shadow: 0 0 24px rgba(0, 0, 0, 0.01);
  transition: box-shadow 0.3s ease;
  font-size: 2rem;
  border-radius: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
  padding-right: 48px;
}

.active-slide {
  box-shadow: 0 0 36px rgba(0, 0, 0, 0.6);
}

.dot {
  height: 8px;
  width: 8px;
  background-color: #fff;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.3s ease;
  cursor: pointer;
}

.dot.active {
  background-color: #434343;
}

.carousel-fade {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 280px;
  pointer-events: none;
  /* allow clicks through */
  z-index: 2;
}

.carousel-fade-left {
  left: 0;
  background: linear-gradient(to right,
      rgba(229, 229, 229, 1) 0%,
      rgba(229, 229, 229, 0.9) 60%,
      rgba(229, 229, 229, 0) 100%);
}

.carousel-fade-right {
  right: 0;
  background: linear-gradient(to left,
      rgba(229, 229, 229, 1) 0%,
      rgba(229, 229, 229, 0.9) 60%,
      rgba(229, 229, 229, 0) 100%);
}


/* FOOTER */

.section-footer {
  margin: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.footer-links {
  list-style: none;
  display: flex;
}

.footer-links a {
  text-decoration: none;
  font-size: 1rem;
}

.footer-links a:hover {
  color: #fff;
  background-color: rgba(0, 0, 0, 0.03);
}

.section-copyright {
  border-top: 1px solid #666;
}

.fa-linkedin-in {
  padding: 10px 10px;
  font-size: 18px;
  background-color: #aaa;
  width: 36px;
  height: 36px;
  border-radius: 50%;
  text-align: center;
}

.fa-linkedin-in:hover {
  background-color: #fff;
}

